--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ a,
 a:link{
 	background-color: #142D3D;
 	text-decoration: none;
+	font-weight: bold;
 	}
 a:hover{
 	background-color: #F1F080;
-	/* font-weight: bold; */
 }
 a:active,
 a:visited,
@@ -30,8 +30,9 @@ a.social:hover{
 	}
 a.nav-link{
 	background-color: transparent;
-	font-weight: normal;
+	font-weight: bold;
 	font-size: 0.8em;
+	padding: 8px;
 }
 a.nav-link:hover{
 	font-weight: bolder;
@@ -40,27 +41,24 @@ a.nav-link:hover{
 }
 a.body-link{
 	background-color: #F1F080;
-	font-weight: bold;
 }
-
-.content{
-	width: 60%;
-	margin:auto;
+a.body-link:hover{
+	background-color: #142D3D;
+	color: #FFFFFF;
 }
 
 /*----------------------HELLO-------------------------*/
 .hello{
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 	align-items: center;
 	height: 100vh;
 }
 
 .hello-title{
-	margin-top: 20%;
 	width: 60%;
-	font-size: 50px;
-	color: #142D3D;
+	font-size: 3em;
 	font-weight: bolder;
 	padding-bottom: 48px;
 	min-width: 300px;
@@ -68,8 +66,6 @@ a.body-link{
 
 .hello-copy{
 	padding: 16px 0;
-	font-family: 'Roboto Mono', monospace;
-	color: #142D3D;
 	line-height: 24px;
 	width: 40%;
 	min-width: 300px;
@@ -77,9 +73,7 @@ a.body-link{
 
 .hello-copy-disclaimer{
 	padding: 16px 0;
-	font-family: 'Roboto Mono', monospace;
-	color: #142D3D;
-	font-size: 12px;
+	font-size: 0.8em;
 	line-height: 16px;
 	width: 40%;
 	min-width: 300px;
@@ -98,9 +92,7 @@ a.body-link{
 .tldr-title{
 	margin-top: 20%;
 	width: 60%;
-	font-family: 'Roboto Mono', monospace;
-	font-size: 50px;
-	color: #142D3D;
+	font-size: 3em;
 	font-weight: bolder;
 	padding-bottom: 48px;
 	min-width: 300px;
@@ -108,15 +100,13 @@ a.body-link{
 
 .tldr-copy{
 	padding: 16px 0;
-	font-family: 'Roboto Mono', monospace;
-	color: #142D3D;
 	line-height: 24px;
 	width: 40%;
 	min-width: 300px;
 }
 
-/*----------------------VISION SCIENCE-------------------------*/
-.vision-science{
+/*----------------------DX-------------------------*/
+.dx{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -124,90 +114,35 @@ a.body-link{
 	width:100%;
 }
 
-.vision-science-title{
+.dx-title{
 	margin-top: 20%;
 	width: 60%;
-	font-family: 'Roboto Mono', monospace;
-	font-size: 50px;
-	color: #142D3D;
+	font-size: 3em;
 	font-weight: bolder;
 	line-height: 54px;
 	padding-bottom: 48px;
 	min-width: 300px;
 }
 
-.vision-science-copy{
-	display: flex;
-	flex-direction: column;
-	align-self: center;
-	align-items: center;
-	padding-bottom: 150px;
-	font-family: 'Roboto Mono', monospace;
-	color: #142D3D;
-	line-height: 24px;
-	width: 40%;
-	min-width: 400px;
-	min-width: 300px;
-}
-
-.vision-science-img{
-	animation: fade 2s ease-in;
-	width:284px;
-	height:180px;
-	padding-top:80px;
-	padding-bottom:80px;
-}
-
-@keyframes fade{
-	0%{
-		opacity: 0;
-	}
-	100%{
-		opacity: 100;
-	}
-}
-
-/*----------------------DATAVIZ-------------------------*/
-.dataviz{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin:auto;
-	width:100%;
-}
-
-.dataviz-title{
-	margin-top: 20%;
-	width: 60%;
-	font-family: 'Roboto Mono', monospace;
-	font-size: 50px;
-	color: #142D3D;
-	font-weight: bolder;
-	line-height: 54px;
-	padding-bottom: 48px;
-	min-width: 300px;
-}
-
-.dataviz-copy{
+.dx-copy{
 	display: flex;
 	flex-direction: column;
 	align-self: center;
 	align-items: center;
 	padding: 16px 0;
-	font-family: 'Roboto Mono', monospace;
-	color: #142D3D;
+	margin-bottom: 150px;
 	line-height: 24px;
 	width: 40%;
 	min-width: 400px;
 	min-width: 300px;
 }
 
-.dataviz-img{
+.dx-img{
 	animation: fade 2s ease-in;
-	width:284px;
-	height:360px;
+	width:360px;
+	height:420px;
 	padding-top:50px;
-	padding-bottom:50px;"
+	padding-bottom:50px;">
 }
 
 @keyframes fade{
@@ -232,9 +167,7 @@ a.body-link{
 .aviation-title{
 	margin-top: 20%;
 	width: 60%;
-	font-family: 'Roboto Mono', monospace;
-	font-size: 50px;
-	color: #142D3D;
+	font-size: 3em;
 	font-weight: bolder;
 	line-height: 54px;
 	padding-bottom: 48px;
@@ -247,8 +180,6 @@ a.body-link{
 	align-self: center;
 	align-items: center;
 	padding: 16px 0;
-	font-family: 'Roboto Mono', monospace;
-	color: #142D3D;
 	line-height: 24px;
 	width: 40%;
 	min-width: 400px;
@@ -272,8 +203,8 @@ a.body-link{
 	}
 }
 
-/*----------------------DX-------------------------*/
-.dx{
+/*----------------------DATAVIZ-------------------------*/
+.dataviz{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -281,39 +212,34 @@ a.body-link{
 	width:100%;
 }
 
-.dx-title{
+.dataviz-title{
 	margin-top: 20%;
 	width: 60%;
-	font-family: 'Roboto Mono', monospace;
-	font-size: 50px;
-	color: #142D3D;
+	font-size: 3em;
 	font-weight: bolder;
 	line-height: 54px;
 	padding-bottom: 48px;
 	min-width: 300px;
 }
 
-.dx-copy{
+.dataviz-copy{
 	display: flex;
 	flex-direction: column;
 	align-self: center;
 	align-items: center;
 	padding: 16px 0;
-	margin-bottom: 150px;
-	font-family: 'Roboto Mono', monospace;
-	color: #142D3D;
 	line-height: 24px;
 	width: 40%;
 	min-width: 400px;
 	min-width: 300px;
 }
 
-.dx-img{
+.dataviz-img{
 	animation: fade 2s ease-in;
-	width:360px;
-	height:420px;
+	width:284px;
+	height:360px;
 	padding-top:50px;
-	padding-bottom:50px;">
+	padding-bottom:50px;"
 }
 
 @keyframes fade{
@@ -325,6 +251,55 @@ a.body-link{
 	}
 }
 
+/*----------------------VISION SCIENCE-------------------------*/
+.vision-science{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin:auto;
+	width:100%;
+}
+
+.vision-science-title{
+	margin-top: 20%;
+	width: 60%;
+	font-size: 3em;
+	font-weight: bolder;
+	line-height: 54px;
+	padding-bottom: 48px;
+	min-width: 300px;
+}
+
+.vision-science-copy{
+	display: flex;
+	flex-direction: column;
+	align-self: center;
+	align-items: center;
+	padding-bottom: 150px;
+	line-height: 24px;
+	width: 40%;
+	min-width: 400px;
+	min-width: 300px;
+}
+
+.vision-science-img{
+	animation: fade 2s ease-in;
+	width:284px;
+	height:180px;
+	padding-top:80px;
+	padding-bottom:80px;
+}
+
+@keyframes fade{
+	0%{
+		opacity: 0;
+	}
+	100%{
+		opacity: 100;
+	}
+}
+
+
 /*----------------------COPYRIGHT-------------------------*/
 .copyright{
 	display: flex;
@@ -333,9 +308,7 @@ a.body-link{
 	margin:auto;
 	width:100%;
 	padding-bottom: 300px;
-	font-family: 'Roboto Mono', monospace;
-	color: #142D3D;
-	font-size: 12px;
+	font-size: 0.8em;
 	line-height: 16px;
 	width: 40%;
 	min-width: 300px;
@@ -349,9 +322,10 @@ a.body-link{
 }
 
 .nav{
+	width: 60%;
 	display: flex;
+	flex-direction: row;
   justify-content: flex-start;
-	align-items: center;
   padding: 16px 0;
 	padding-right: 24px;
 	margin-bottom: 40px;
@@ -359,8 +333,13 @@ a.body-link{
 	overflow: hidden;
 	position: fixed;
 	bottom: 0;
-	width: 60%;
 	height: 10px;
+}
+
+.ul{
+	list-style-type: none;
+	padding-left: 8px;
+	padding-right: 8px;
 }
 
 .bottom-nav{
