--- a/style.css
+++ b/style.css
@@ -47,9 +47,63 @@ a.body-link:hover{
 	color: #FFFFFF;
 }
 
+/*----------------------CONTENT STYLING-------------------------*/
 .content{
 	width: 50%;
 	margin: auto;
+}
+
+.date{
+	display: flex;
+	width: 60%;
+	margin-top: 20%;
+	padding: 16px 0;
+	font-size: 0.8em;
+	line-height: 16px;
+	opacity: 70%;
+	min-width: 300px;
+}
+
+.title{
+	width: 60%;
+	font-size: 3em;
+	font-weight: bolder;
+	padding: 16px 0;
+	min-width: 300px;
+}
+
+.body-copy{
+	padding: 48px 0;
+	line-height: 24px;
+	width: 40%;
+	min-width: 300px;
+}
+
+.subtext{
+	padding: 16px 0;
+	font-size: 0.8em;
+	line-height: 16px;
+	width: 40%;
+	min-width: 300px;
+}
+
+.disclaimer{
+	padding: 16px 0;
+	font-size: 0.8em;
+	line-height: 16px;
+	width: 40%;
+	min-width: 300px;
+}
+
+.copyright{
+	margin:auto;
+	width:100%;
+	padding-top: 48px;
+	padding-bottom: 300px;
+	font-size: 0.8em;
+	line-height: 16px;
+	width: 40%;
+	min-width: 300px;
 }
 
 /*----------------------HELLO-------------------------*/
@@ -66,21 +120,6 @@ a.body-link:hover{
 	font-size: 3em;
 	font-weight: bolder;
 	padding-bottom: 48px;
-	min-width: 300px;
-}
-
-.hello-copy{
-	padding: 16px 0;
-	line-height: 24px;
-	width: 40%;
-	min-width: 300px;
-}
-
-.hello-copy-disclaimer{
-	padding: 16px 0;
-	font-size: 0.8em;
-	line-height: 16px;
-	width: 40%;
 	min-width: 300px;
 }
 
@@ -103,13 +142,6 @@ a.body-link:hover{
 	min-width: 300px;
 }
 
-.tldr-copy{
-	padding: 16px 0;
-	line-height: 24px;
-	width: 40%;
-	min-width: 300px;
-}
-
 /*----------------------DX-------------------------*/
 .dx{
 	display: flex;
@@ -119,44 +151,11 @@ a.body-link:hover{
 	width:100%;
 }
 
-.dx-title{
-	margin-top: 20%;
-	width: 60%;
-	font-size: 3em;
-	font-weight: bolder;
-	line-height: 54px;
-	padding-bottom: 48px;
-	min-width: 300px;
-}
-
-.dx-copy{
-	display: flex;
-	flex-direction: column;
-	align-self: center;
-	align-items: center;
-	padding: 16px 0;
-	margin-bottom: 150px;
-	line-height: 24px;
-	width: 40%;
-	min-width: 400px;
-	min-width: 300px;
-}
-
 .dx-img{
-	animation: fade 2s ease-in;
 	width:360px;
 	height:420px;
 	padding-top:50px;
 	padding-bottom:50px;">
-}
-
-@keyframes fade{
-	0%{
-		opacity: 0;
-	}
-	100%{
-		opacity: 100;
-	}
 }
 
 /*----------------------AVIATION-------------------------*/
@@ -168,43 +167,11 @@ a.body-link:hover{
 	width:100%;
 }
 
-.aviation-title{
-	margin-top: 20%;
-	width: 60%;
-	font-size: 3em;
-	font-weight: bolder;
-	line-height: 54px;
-	padding-bottom: 48px;
-	min-width: 300px;
-}
-
-.aviation-copy{
-	display: flex;
-	flex-direction: column;
-	align-self: center;
-	align-items: center;
-	padding: 16px 0;
-	line-height: 24px;
-	width: 40%;
-	min-width: 400px;
-	min-width: 300px;
-}
-
 .aviation-img{
-	animation: fade 2s ease-in;
 	width:284px;
 	height:360px;
 	padding-top:50px;
-	padding-bottom:50px;">
-}
-
-@keyframes fade{
-	0%{
-		opacity: 0;
-	}
-	100%{
-		opacity: 100;
-	}
+	padding-bottom:50px;
 }
 
 /*----------------------DATAVIZ-------------------------*/
@@ -216,43 +183,11 @@ a.body-link:hover{
 	width:100%;
 }
 
-.dataviz-title{
-	margin-top: 20%;
-	width: 60%;
-	font-size: 3em;
-	font-weight: bolder;
-	line-height: 54px;
-	padding-bottom: 48px;
-	min-width: 300px;
-}
-
-.dataviz-copy{
-	display: flex;
-	flex-direction: column;
-	align-self: center;
-	align-items: center;
-	padding: 16px 0;
-	line-height: 24px;
-	width: 40%;
-	min-width: 400px;
-	min-width: 300px;
-}
-
 .dataviz-img{
-	animation: fade 2s ease-in;
 	width:284px;
 	height:360px;
 	padding-top:50px;
-	padding-bottom:50px;"
-}
-
-@keyframes fade{
-	0%{
-		opacity: 0;
-	}
-	100%{
-		opacity: 100;
-	}
+	padding-bottom:50px;
 }
 
 /*----------------------VISION SCIENCE-------------------------*/
@@ -264,58 +199,11 @@ a.body-link:hover{
 	width:100%;
 }
 
-.vision-science-title{
-	margin-top: 20%;
-	width: 60%;
-	font-size: 3em;
-	font-weight: bolder;
-	line-height: 54px;
-	padding-bottom: 48px;
-	min-width: 300px;
-}
-
-.vision-science-copy{
-	display: flex;
-	flex-direction: column;
-	align-self: center;
-	align-items: center;
-	padding-bottom: 150px;
-	line-height: 24px;
-	width: 40%;
-	min-width: 400px;
-	min-width: 300px;
-}
-
 .vision-science-img{
-	animation: fade 2s ease-in;
 	width:284px;
 	height:180px;
 	padding-top:80px;
 	padding-bottom:80px;
-}
-
-@keyframes fade{
-	0%{
-		opacity: 0;
-	}
-	100%{
-		opacity: 100;
-	}
-}
-
-
-/*----------------------COPYRIGHT-------------------------*/
-.copyright{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin:auto;
-	width:100%;
-	padding-bottom: 300px;
-	font-size: 0.8em;
-	line-height: 16px;
-	width: 40%;
-	min-width: 300px;
 }
 
 /*----------------------NAV-------------------------*/
@@ -346,7 +234,7 @@ a.body-link:hover{
 	padding-right: 8px;
 }
 
-.bottom-nav{
+.social-nav{
 	display: flex;
   justify-content: flex-end;
 	align-items: center;
