--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ a.body-link:hover{
 	height: 10px;
 }
 
-/*----------------------------------MEDIA QUERIES-----------------------------------*/
+/*----------------------------------RESPONSIVE-----------------------------------*/
 /* Phones: Portrait and Landscape */
 @media (max-width: 767px) {
 		.social-nav{
@@ -250,7 +250,59 @@ a.body-link:hover{
 		.nav{
 			visibility: hidden;
 		}
+
+		/************* nav menu ******************/
+		/* main menu block */
+	.nav {
+		background-color: #fff;
+		position: absolute;
+		left: 0;
+		top: 0;
+		z-index: 100;
+		height: 100%;
+		width: 100%;
+		display: table;
+		text-align: center;
+		opacity: 0;
+		transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+		transform: scale(0);
+		&.act {
+			opacity: 1;
+			transform: scale(1);
+			ul li {
+			opacity: 1;
+			transform: translateX(0);
+		}
+		}
+		ul {
+			display: table-cell;
+			vertical-align: middle;
+		}
+		li {
+			padding: 8px 0;
+			transition: all 400ms 510ms;
+			opacity: 0;
+			&:nth-child(odd) {
+				transform: translateX(30%);
+			}
+			&:nth-child(even) {
+				transform: translateX(-30%);
+			}
+			&:last-child {
+				transform: none;
+			}
+		}
+		a {
+			color: #19b698;
+			display: inline-block;
+			font-size: 18px;
+			&.suBtn {
+				color: #fff;
+			}
+		}
+	}
 }
+
 
 /* Tablets*/
 @media (min-device-width: 768px)
