--- a/style.css
+++ b/style.css
@@ -247,10 +247,23 @@ a.menu-icon{
 /* Phones: Portrait and Landscape */
 @media (max-width: 767px) {
 		.social-nav{
-			min-width: 100vw;
+			min-width: 320px;
 			height: 32px;
-			padding-right: 36px;
-			padding-left: 36px;
+			padding-right: 48px;
+			padding-left: 48px;
+			position: fixed;
+			bottom: 0;
+			overflow: hidden;
+		}
+
+		.content{
+			overflow: hidden;
+			min-width: 268px;
+			width: 100%;
+		}
+
+		.title{
+			font-size: 2.5em;
 		}
 
 		a:link{
