--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ a.menu-icon{
 
 /*----------------------------------RESPONSIVE-----------------------------------*/
 /* Phones: Portrait and Landscape */
-
+@media (max-width: 767px){
 		.social-nav{
 			display: flex;
 		  justify-content: space-between;
@@ -336,16 +336,22 @@ a.menu-icon{
 		}
 
 		.social-nav{
-			min-width: 320px;
-			width: 100%;
-			height: 32px;
+			display: flex;
+		  justify-content: space-between;
+			align-items: center;
+		  padding-top: 16px;
+			padding-bottom: 16px;
 			padding-right: 24px;
 			padding-left: 24px;
+			background-color: #142D3D;
+			overflow: hidden;
 			position: fixed;
 			bottom: 0;
-			overflow: hidden;
+			left: 0;
+			width: 100%;
+			height: 60px;
+			box-sizing: border-box;
 			z-index: 3;
-			margin: auto;
 		}
 
 		a.menu-icon{
