copy and mobile nav display setting fixes

--- a/style.css
+++ b/style.css
@@ -243,6 +243,10 @@ a.menu-icon{
 	visibility: hidden;
 }
 
+.mobile-nav{
+	display: none;
+}
+
 
 /*----------------------------------RESPONSIVE-----------------------------------*/
 /* Phones: Portrait and Landscape */
